--- a/style.css
+++ b/style.css
@@ -12,3 +12,70 @@ h3,
 h4 {
   color: rgb(40, 40, 40);
 }
+
+nav {
+  position: fixed;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20%;
+  height: 10vh;
+  background-color: rgba(255, 255, 255, 0.6);
+  backdrop-filter: blur(10px);
+  z-index: 10;
+}
+
+nav, a {
+  text-decoration: none;
+  color: #000;
+  font-size: 0.9rem;
+}
+
+.nav-links a, .nav-links button {
+  margin-left: 2rem;
+}
+
+.logo {
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.buy-button {
+  padding: 0.2rem 2rem;
+  font-size: 0.7rem;
+  background-color: rgb(40, 40, 40);
+  color: #fff;
+  border: none;
+  border-radius: 1rem;
+  cursor: pointer;
+}
+
+/* First Page */
+
+.first-page {
+  min-height: 100vh;
+  padding: 0 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.first-page-text {
+  z-index: 2;
+  text-align: center;
+  padding-bottom: 10rem;
+}
+
+.first-page-title {
+  font-size: 1.5rem;
+}
+
+.first-page-subtitle {
+  font-size: 3rem;
+}
+
+.intro-video {
+  position: absolute;
+}
