--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   padding: 0 20%;
-  height: 10vh;
+  height: 8vh;
   background-color: rgba(255, 255, 255, 0.6);
   backdrop-filter: blur(10px);
   z-index: 10;
@@ -78,4 +78,31 @@ nav, a {
 
 .intro-video {
   position: absolute;
+}
+
+/* Second Page */
+
+.second-page {
+  min-height: 120vh;
+  color: rgba(255, 255, 255, 0.6);
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+}
+
+.smoke-video {
+  position: absolute;
+  height: 100%;
+  width: 100vw;
+  object-fit: cover;
+  z-index: 1;
+}
+
+.second-text {
+  padding: 5% 30%;
+  position: relative;
+  z-index: 2;
+  font-size: 3.3rem;
+  font-weight: bold;
 }
