--- a/style.css
+++ b/style.css
@@ -103,6 +103,65 @@ nav, a {
   padding: 5% 30%;
   position: relative;
   z-index: 2;
-  font-size: 3.3rem;
+  font-size: 3.5rem;
   font-weight: bold;
 }
+
+/* Thrid Page */
+
+.third-page {
+  position: relative;
+  padding: 0% 20%;
+}
+
+.product-text-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 100vh;
+  background: #fff;
+}
+
+.phone-size {
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+.pro-size {
+  text-align: right;
+}
+
+.max-size {
+  text-align: left;
+}
+
+.product-images {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.large-phone {
+  position: relative;
+  transform: translateX(40%) scale(0.8);
+  z-index: 1;
+}
+
+.small-phone {
+  position: relative;
+  transform: translateX(-40%) scale(0.8);
+  z-index: 2;
+}
+
+.retina-line {
+  position: absolute;
+  bottom: 15%;
+  left: 50%;
+  transform: translate(-50%, -15%);
+  font-size: 0.8rem;
+  font-weight: bold;
+}
+
+/* Forth Page */
+
