--- a/style.css
+++ b/style.css
@@ -60,6 +60,7 @@ nav, a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .first-page-text {
@@ -78,6 +79,9 @@ nav, a {
 
 .intro-video {
   position: absolute;
+  height: 100%;
+  width: 100vw;
+  object-fit: cover;
 }
 
 /* Second Page */
@@ -150,7 +154,7 @@ nav, a {
 
 .small-phone {
   position: relative;
-  transform: translateX(-40%) scale(0.8);
+  transform: translateX(-44%) scale(0.8);
   z-index: 2;
 }
 
@@ -163,5 +167,62 @@ nav, a {
   font-weight: bold;
 }
 
-/* Forth Page */
+/* Forth Page Slider */
 
+.forth-page {
+  min-height: 100vh;
+  display: flex;
+  position: relative;
+}
+
+.purchase-left {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  align-items: center;
+  justify-content: center;
+  flex: 1;
+}
+
+.phone-gallery {
+  display: flex;
+  align-self: flex-start;
+}
+
+.phone-gallery img {
+  transform: scale(0.8);
+}
+
+.phone-gallery-container {
+  min-width: 50vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.swatch-container {
+  text-align: center;
+}
+
+.swatches img{
+  padding: 0.5rem 0.3rem;
+  cursor: pointer;
+}
+
+.swatch-container span {
+  font-size: 0.8rem;
+}
+/* purchase right */
+.purchase-right {
+  flex: 1;
+  position: relative;
+  background: #000;
+}
+
+.purchase-right img {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0%) scale(0.9);
+  transform-origin: bottom;
+}
